# bitbased

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  ruff.toml
bitbased/: __init__.py  _version.py  bits.py  bitstring.py  cidrv4.py  convenience.py  covering_set.py  display.py  errors.py  ip_and_cidr_v4.py  ipv4.py  util.py
tests/: test_bit_strings.py  test_bitstring_properties.py  test_cidr_ranges.py  test_covering_set.py  test_ipv4.py
