[project]
name = "bitbased"
dynamic = ['version']
requires-python = ">=3.12"
description = "Bitmath for fun and profit"
readme = "README.md"
dependencies = [
    'attrs>=23.0.0',
]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=67.3.2",
    "versioningit~=2.2.0",
]

[tool.setuptools]
packages = ['bitbased']

[tool.versioningit.vcs]
method = "git"

[tool.versioningit.onbuild]
source-file = "bitbased/_version.py"
build-file = "bitbased/_version.py"
require-match = false

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"



# ───── Pyright ──────────────────────────────────────────────────
[tool.pyright]
# see https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ['bitbased']
typeCheckingMode = "standard"
pythonVersion="3.12"

